test-data/elab/let/synth.snapshot
exit status: 0

stdout = """
#var(0) : #error
#var(0) ⇝ #error

"""

stderr = """
error: Type mismatch: expected `#error`, found `Int`
  ┌─ test-data/elab/let/synth.pion:1:9
  │
1 │ let x = 5;
  │         ^


"""
